particle bug fix on mobile, added video to mobile too

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -101,6 +101,7 @@ body {
 	left: 0;
   width: 100%;
   height: 100%;
+  z-index: 2;
 }
 
 footer {
@@ -307,7 +308,7 @@ video {
     bottom: 0;
     left: 0;
     background-image: linear-gradient(135deg, rgba(#667eea, 0.8) 0%, rgba(#764ba2, 0.8) 100%);
-    z-index: 1;
+    z-index: 3;
 }
 
 /*
@@ -318,14 +319,14 @@ video {
 
 // Medium Devices
 @media only screen and (max-width : 992px) {
-    #bgvid {
-      display: none;
-    }
+    // #bgvid {
+    //   display: none;
+    // }
 
     #lead {
         // height: 100vh;
         padding: 100px 15px;
-        background: url('../img/lead-bg.jpg');
+        // background: url('../img/lead-bg.jpg');
         background-size: cover;
     }
 
